// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`issue-7474.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
1. - XXX
     - XXX
2. XXX

=====================================output=====================================
1. - XXX
     - XXX
2. XXX

================================================================================
`;

exports[`issue-9314.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
# Bibliography

-

---

=====================================output=====================================
# Bibliography

-

---

================================================================================
`;

exports[`issue-10063.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
# Example 1 (compact list with code block)

- Sibling item before
- A bullet point with bare text (not in a \`<p>\`), followed by a code block that includes an empty line
  \`\`\`javascript
  const foo = "bar";

  console.log(foo);
  \`\`\`
- Sibling item after

# Example 2 (compact nested list with code block)

- Parent bullet point which is not wrapped in \`<p>\`
  - Sibling item before
  - Item containing a code block that includes an empty line
    \`\`\`javascript
    const foo = "bar";

    console.log(foo);
    \`\`\`
  - Sibling item after

# Example 3 (like example 2, but doesn't trigger the bug)

- It works as expected
  - If the code block
  - Does not have a line break
    \`\`\`javascript
    const foo = "bar";
    console.log(foo);
    \`\`\`
  - It doesn't affect other items

=====================================output=====================================
# Example 1 (compact list with code block)

- Sibling item before
- A bullet point with bare text (not in a \`<p>\`), followed by a code block that
  includes an empty line
  \`\`\`javascript
  const foo = "bar";

  console.log(foo);
  \`\`\`
- Sibling item after

# Example 2 (compact nested list with code block)

- Parent bullet point which is not wrapped in \`<p>\`
  - Sibling item before
  - Item containing a code block that includes an empty line
    \`\`\`javascript
    const foo = "bar";

    console.log(foo);
    \`\`\`
  - Sibling item after

# Example 3 (like example 2, but doesn't trigger the bug)

- It works as expected
  - If the code block
  - Does not have a line break
    \`\`\`javascript
    const foo = "bar";
    console.log(foo);
    \`\`\`
  - It doesn't affect other items

================================================================================
`;

exports[`issue-11202.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
\`\`\`markdown
<!-- comment -->
<!-- another comment -->
-
-
-
\`\`\`


=====================================output=====================================
\`\`\`markdown
<!-- comment -->
<!-- another comment -->

-
-
-
\`\`\`

================================================================================
`;

exports[`issue-12677.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
5.1 **Section 1**

- apple
- banana
- cherry

5.2 **Section 2**

Why is this section indented?

=====================================output=====================================
5.1 **Section 1**

- apple
- banana
- cherry

5.2 **Section 2**

Why is this section indented?

================================================================================
`;

exports[`issue-17778.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
1. list item
999999999. list item

1. list item
1000000000. ordered list marker can't have more than 9 digits

=====================================output=====================================
1. list item
2. list item

3. list item 1000000000. ordered list marker can't have more than 9 digits

================================================================================
`;

exports[`issue-19146.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
 - foo
   - bar
	 - baz

=====================================output=====================================
- foo
  - bar
    - baz

================================================================================
`;

exports[`issue-19152.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
-    foo
-		foo

=====================================output=====================================
- foo
-       foo

================================================================================
`;
